overflow fixed

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 
 body {
   background-color: black;
+  overflow-x: hidden;
 }
 
 .scroll_line {
@@ -164,7 +165,7 @@ figure {
 
 figcaption p {
   width: auto;
-  padding: 0 20px;
+  padding: 0 0 0 20px;
   margin: 0;
 }
 
